--- a/VRChat/32/1130532.html
+++ b/VRChat/32/1130532.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q44b+d/KFIR1clVzvQAQOpBpbtw2nyHEpLP2Fk9pwrk="></script>
+    "BurbeL75b7HM1tXVpOj9BT7jnoQHfHyBxg2S+Z5HK24="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】メディカルセンタースタッフさん","description":"【オリジナル3Dモデル】メディカルセンタースタッフさん\n制作者 アルマジロン\n\n※以下にモデルについての説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご了承された上でのご購入をお願いいたします。\n\n※VRChat向けの設定をしておりますが、MMD等他ソフトでのご利用は規約に則っていただければ自由です。\n","url":"https://booth.pm/ja/items/1130532","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/802c2f96-7b07-494b-bf9c-9361ff7eca6e/i/1130532/e0e6c9d8-ba0d-4c54-aac0-4c4f5198c02b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q44b+d/KFIR1clVzvQAQOpBpbtw2nyHEpLP2Fk9pwrk="></script>
+    nonce="BurbeL75b7HM1tXVpOj9BT7jnoQHfHyBxg2S+Z5HK24="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1130532/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              5804
+                              5805
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1130532/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              5804
+                              5805
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
