--- a/VRChat/57/1130457.html
+++ b/VRChat/57/1130457.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "F/qKJmFQLLFlFgplsXwcuXj8lW0WCa2jdCP2XU0B60Y="></script>
+    "pqsYM2Eq7FXy/hfl999upBxQC24jxB9tXmzxuxVwwE8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【UnityPackage】シンプルな棚 横仕切り可動【白黒2種】","description":"おしゃれかもしれないシンプルな棚です。\n横の仕切り板を別のオブジェクトに分けているので飾りたいものにあわせて収納の縦幅を変更できます。\n白と黒の棚はPrefab化しているので簡単に使い分けれます。\n\nポリゴン数：3372\nテクスチャ2種\n\nご自由にお使いください。","url":"https://booth.pm/ja/items/1130457","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1130457/50d405f4-e530-4c5e-b4c3-09da31a59f65_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F/qKJmFQLLFlFgplsXwcuXj8lW0WCa2jdCP2XU0B60Y="></script>
+    nonce="pqsYM2Eq7FXy/hfl999upBxQC24jxB9tXmzxuxVwwE8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1130457/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               255
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1130457/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               255
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
