--- a/VRChat/70/1337770.html
+++ b/VRChat/70/1337770.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ximzdQfpX4geShkDlC0cFka/nXn8gz5miLqXHC0zezc="></script>
+    "FDNjGk7SCf9AnTc5t3Uj6wdil/602NCBfGLGK1soJbo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　着せ替え改変用3Dモデル　汎用型ジャージ[V1.01]","description":"□VRChat女性アバターを主に想定した着せ替え用ジャージ上着の3Dモデルです。\n\n[V1.01修正内容]\n・fbxファイルがblenderでは開けない問題を修正しました。\n\n\n\n\n\n\n□内容\n・Jersey.fbx　本体\n\n・M10J.unitypackage　本体2\n\n・readme.txt これ\n\n※サムネイルのShacloちゃん(https://booth.pm/ja/items/987296)は含まれません。\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackage版はUTS2.0.6セットアップ済みです。\nunitypackageの場合、ファイルはAssets/M10Jerseyフォルダに作成されます。\n\nfbxをモデリングソフト上で読み込む、或いはunity上でスキニングされた服の各ボーンをアバター内のボーン以下にセットするなどしてご利用下さい。\n\nテクスチャ類・マップ類はfbx・unitypackage内に組み込まれた状態です。\n\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2019/4/29：販売開始\n\n2019/5/18：fbxファイルがBlenderで開けない問題を修正しました。","url":"https://booth.pm/ja/items/1337770","offers":{"priceCurrency":"JPY","@type":"Offer","price":"900"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1337770/ad3f9a91-a638-46bb-8dc6-72b54e371910_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ximzdQfpX4geShkDlC0cFka/nXn8gz5miLqXHC0zezc="></script>
+    nonce="FDNjGk7SCf9AnTc5t3Uj6wdil/602NCBfGLGK1soJbo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1337770/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1196
+                              1195
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1337770/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1196
+                              1195
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
