--- a/VRChat/83/1337683.html
+++ b/VRChat/83/1337683.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DY+zpxXsJZiRabparPkscn0ZXypJYeVAG2kYz3jdxxA="></script>
+    "jnZK+fAc+2y1hyjZdXZg3tTCqIKwYNTBVliiGlRu5X0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル-△5000-『Kona_コナ_』","description":"3Dオリジナルモデル\n\nKona-コナ-△4991\n\n\nVRChatでの使用を想定した3Dモデルです。\nOculus Quest版VRChatに対応しています。\n\nフルトラッキングにも対応しており、PC版での使用も可能です。快適な読み込みを保証します。\n\n褐色肌に加え、肌色Ver.も含めたテクスチャ6種類も同梱しており、さらにpsdファイルもおまけでついてきます。\n\nそのほか\n・リップシンク完全対応\n・表情各7種類(blend可)\n\n【内容】\n・設定済Unitypackage(VRC SDKは各自ダウンロードなりして下さい)\n・FBX\n・テクスチャ\n\n\n【禁則事項】\n・自作発言および再配布(public設定でのアップロードやワールドペデスタルに置くこともも禁止)\n・営利活動\n\n著作権はresolにあり放棄しておりません。テクスチャの改変は自由に行ってください。\n\n【免責事項】\n・当モデルを使用することで使用者側に不利な問題が生じた場合、いかなるものであっても\n当方は責任を一切負いません\n\n何かありましたらこちら(https://twitter.com/resol72)まで連絡してください。\n\n5/1 追記。手のウェイトを調整しました。睡眠用アバターが縦になる現象を修正しました。お手数ですが、kona2.zipをダウンロードしてください。\n\n追記　UnityでQuest用にアップロードする際には、VRC SDKの専用シェーダーをお使いください。\n","url":"https://booth.pm/ja/items/1337683","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/b9012e25-620b-4a66-a927-58ca245f129c/i/1337683/7b683a39-59bd-4e1e-99c2-8868f37bd40c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DY+zpxXsJZiRabparPkscn0ZXypJYeVAG2kYz3jdxxA="></script>
+    nonce="jnZK+fAc+2y1hyjZdXZg3tTCqIKwYNTBVliiGlRu5X0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1337683/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1337683/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               130
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
