--- a/VRChat/45/1336445.html
+++ b/VRChat/45/1336445.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hy7nKEiD1U3Smrv95q2vFhg9mHamaLEzMekY96h+H54="></script>
+    "dzBllSpZcOQmpo/BtIPHR/MGCeEFH2ZYeis5Z++tbUA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【スキニング済】緑河印のライフジャケット","description":"土木の水着、ライフジャケットの3Dモデルです!\n\n＜緑河印のライフジャケット＞\n\n三角面数：628\n緑河印あり・なしのバージョンが入っています。\n\nUnityのみで着せ替え・色変えができます。\n・スキニング(ウェイト設定)済みです。\n・「izm(@izm)」様の「VRChat向けUnity着替え補助スクリプト」を同梱しています。\n配布元を参考に簡単に着せ替えができるので、ぜひこちらをご覧ください。\n配布元：https://neon-izm.booth.pm/items/1273588\n・4色のマテリアル(オレンジ・黄・緑・青)が入っています。\n\nFBX形式(テクスチャ同梱)・Unitypackage形式の両方が付属しています。\n","url":"https://booth.pm/ja/items/1336445","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/4fc08508-1619-4946-948b-a529c8bbad4c/i/1336445/30a82a3b-d304-4695-bd4c-e30c0cc7bdbf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hy7nKEiD1U3Smrv95q2vFhg9mHamaLEzMekY96h+H54="></script>
+    nonce="dzBllSpZcOQmpo/BtIPHR/MGCeEFH2ZYeis5Z++tbUA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336445/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336445/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
